fix color contrast failures

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -544,6 +544,30 @@ body {
   pointer-events: none;
 }
 
+/* postcss-bem-linter: ignore */
+.ace-sqlserver .ace_keyword.ace_operator,
+.ace-sqlserver .ace_lparen,
+.ace-sqlserver .ace_rparen,
+.ace-sqlserver .ace_punctuation {
+  color: #4f4f4f !important;
+}
+
+.ace-sqlserver .ace_support.ace_function {
+  color: #9e21c4 !important;
+}
+
+.ace-sqlserver .ace_storage {
+  color: #1724fb !important;
+}
+
+.ace-sqlserver .ace_string {
+  color: #c40b17 !important;
+}
+
+.ace-sqlserver .ace_numeric {
+  color: #17942e !important;
+}
+
 /** @define output */
 
 .output {
